--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Diamond's Vlog</title>
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Playfair+Display:wght@500&family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
+
+  <!-- Logo and social sharing -->
+  <link rel="icon" type="image/png" href="https://res.cloudinary.com/dbeifkzba/image/upload/v1752262205/Girly_DSV_Logo_taj9oo.jpg">
+  <link rel="apple-touch-icon" href="https://res.cloudinary.com/dbeifkzba/image/upload/v1752262205/Girly_DSV_Logo_taj9oo.jpg">
+  <meta property="og:title" content="Diamond's Vlog">
+  <meta property="og:description" content="Weekly reflections, stories, and inspiration from Diamond Smith.">
+  <meta property="og:image" content="https://res.cloudinary.com/dbeifkzba/image/upload/v1752262205/Girly_DSV_Logo_taj9oo.jpg">
+  <meta property="og:url" content="https://astoria1590.github.io">
+  <meta name="twitter:card" content="summary_large_image">
   <style>
     body {
       margin: 0;
